--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:client": "webpack --mode=production"
+    "build:client": "webpack --mode=production",
+    "dev": "webpack-dev-server --inline --hot --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "koa-static": "^5.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
@@ -38,6 +40,10 @@
     "koa": "^2.11.0",
     "koa-router": "^7.4.0",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
+    "webpack-dev-server": "^3.9.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4"
   }
 }
